# Final-Year

./: .env.example  .gitignore  .gitlab-ci.yml  DOCKER_DEPLOYMENT.md  DOCKER_SETUP_SUMMARY.md  README.md  alembic.ini  docker-healthcheck.sh  docker-monitor.sh  docker-quickstart.sh  package-lock.json  pyproject.toml  questions.txt  service-account-key.json
.chroma/: chroma.sqlite3
.emergent/: emergent.yml
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 71e981f00605_add_personalization_profile_to_user.py  91972c78916e_add_question_and_review_queue_tables.py  c1d831ffba6d_add_question_and_review_queue_tables.py  d1a38111e117_change_question_id_from_uuid_to_string.py  ef4d50af0795_add_personalization_profile_to_user.py
frontend/: check_path.py  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: AdminLayout.jsx  ErrorMessage.jsx  GeminiSidebar.jsx  JsonEditor.jsx  LoadingSpinner.jsx  ProtectedRoute.jsx  ReviewQueueItem.jsx  RubricCard.jsx  RubricEditor.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
frontend/src/data/: mockData.js  mockRubrics.js
frontend/src/hooks/: useWebSpeech.js
frontend/src/pages/: .RubricEditor.jsx  AdminDashboardPage.jsx  AuthForm.css  CandidateDashboardPage.jsx  HomePage.jsx  ReviewQueuePage.jsx  (+4 more)
scripts/: bootstrap.sh  generate-env.sh  initialize_db.py  interactive_interview.py  new_interactive_interview.py  seed_database.py  test_fast_eval_agent.py  test_full_graph_flow.py  test_job_desc_agent.py  test_question_retrieval.py  test_resume_agent.py  test_rubric_eval_agent.py  vectorize.py  visualize_graph.py
scripts/.chroma/: chroma.sqlite3
src/interview_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+64 files in other folders)
